# vispool

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  tox.ini
tests/: test_vispool.py
vispool/: __init__.py  __main__.py  baseline.py  glue_datamodule.py  glue_transformer.py  local.py  our.py  visualization.py  vvg.py
vispool/glue/: datamodule.py  transformer.py
vispool/model/: gcn.py  model.py
