[tool.poetry]
name = "vispool"
version = "0.1.0"
description = "Encoder pooler with visibility graphs."
authors = ["Tuna Alikaşifoğlu <tunakasif@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1.7"
datasets = "^2.16.1"
evaluate = "^0.4.1"
lightning = "^2.1.3"
numpy = "^1.26.3"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.2"
torch = "^2.1.2"
transformers = { extras = ["sentencepiece"], version = "^4.36.2" }
vector-vis-graph = "^0.7.3"
wandb = {extras = ["sweeps"], version = "^0.16.2"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
tox = "^4.11.3"
commitizen = "^3.12.0"
bandit = "^1.7.5"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"

[tool.ruff]
line-length = 120

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
]

[tool.bandit]
# FILE: pyproject.toml
exclude_dirs = ["vispool/__init__.py"]
skips = ["B603"]

[tool.ruff.lint.extend-per-file-ignores]
"vispool/__init__.py" = ["S603"]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.1.0"
version_files = ["pyproject.toml:^version", "vispool/__init__.py:__version__"]
major_version_zero = true
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
